# acdh-cfts-pyutils

./: .env.default  .flake8  .gitignore  README.md  pyproject.toml  recreate_schema.py
.github/workflows/: lint.yml  pypi.yml  test.yml
acdh_cfts_pyutils/: __init__.py
acdh_cfts_pyutils/test/: test_cfts.py
src/acdh_cfts_pyutils/: __init__.py
test/: test_cfts.py
